--- a/style.css
+++ b/style.css
@@ -8,30 +8,47 @@ html, body {
 
 body{
   display: flex;
-  border: 1px dashed red;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border: 0px dashed red;
 }
 
 .title{
+  display: flex;
+  box-sizing: border-box;
   font-family: 'Tomorrow', sans-serif;
-  font-size: 3rem;
-  margin: 2rem;
-  color: #36FF00;
-}
+  font-size: 4rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+  color: #3FFF00;
+  width: 61rem;
+  padding: 1rem;
+  border-radius: 40px;
+  border: 1px solid #3fff00;
+  text-shadow: 0 0 10px rgba(63, 255, 0, 0.8);
+  box-shadow: 0 0 30px rgba(63, 255, 0, 0.8);    
+} 
 
 .start{
+  padding: 1rem 2rem;
+  background-color: #3fff00;
+  border: 2px solid #3fff00;
+  color: white; 
   font-family: 'Tomorrow', sans-serif;
-  font-size: 2rem;
-  padding: 0.5rem 2rem;
-  color: #36FF00;
-  background-color: #606B66;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  cursor: cell;
+  margin: 2rem;
+  text-shadow: 0 0 5px rgb(0 0 0 / 80%);    
+  transition: background-color .5s, border-color .5s, color .5s;  
 }
 
 .start:hover{
-  border-color: #36FF00;
-  border-size: 1px;
+  background-color: black;
+  border: 3px solid white;
+  color: white;
+  cursor: pointer;
 }
 
 
